fixed table alignment

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ h2 {
 }
 
 th, td {
-  @apply p-2 text-left;
+  @apply p-2;
 }
 
 @theme inline {
